--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
     <script src="./heatmap.js"></script>
     <script src="./leaflet-heatmap.js"></script>
     <script src="./socket.io/socket.io.js"></script>
-    <script src="./client.js"></script>
+    <script src="./index.js"></script>
 </body>
 
 </html>
